# internal/constant/types/message.go
@@ -1,0 +1,10 @@
+package types
+
+type MessageSendC2CMessageRequest struct {
+	Seq       string `json:"seq"`
+	ToAccount string `json:"to_account"`
+	Message   string `json:"message"`
+}
+
+type MessageSendC2CMessageResponse struct {
+}
